--- a/site.css
+++ b/site.css
@@ -1,64 +1,52 @@
-* {
-  margin: 0;
+body{
   padding: 0;
-  box-sizing: border-box;
+  margin: 0;
   font-family: 'Poppins', sans-serif;
+  
 }
 
-nav {
+header {
   background-color: #f0bade;
-  padding: 10px 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
-nav .logo a {
-  text-decoration: none;
+header h1 {
   color: rgb(255, 255, 255);
   font-size: 35px;
-  font-weight: 50%;
   font-family: 'Cinzel', serif;
-  margin-right: 550px;
-
+  margin-left: 10%;
+  margin-top: -4%;
+  margin-bottom: 2%;
 }
 
-nav ul {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  padding: 10px;
-}
-
-nav li {
-  margin-left: 7px;
-}
-
-nav li a {
+header a{
   text-decoration: none;
   color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 8px 15px;
-  border-radius: 5px;
-  transition: 0.3s;
+  font-family: 'Poppins', sans-serif;
+  font-size: 30px;
 }
 
-nav li a:hover {
+header button{
+  background-color: transparent;
+  padding: 25 25px;
+  border-radius: 15px;
+  border: none;
+}
+
+header button :hover{
   background-color: white;
   color: black;
+  border-radius: 15px;
+  border: none;
+}
+
+header .menu{
+  margin-left: 70%;
+  margin-top: -4%;
 }
 
 .div1 img {
-  width: 110px;
-  margin-bottom: -35px;
-  margin-left: -60px;
-  margin-top: -25px;
-
-
-
+  width: 120px;
 }
-
 
 .banner {
   height: 100vh;
@@ -88,19 +76,16 @@ nav li a:hover {
 }
 
 .banner02 {
-  height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.281), rgba(0, 0, 0, 0.308)), url('img/v722-aum-35a.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
-  align-items: center;
   justify-content: center;
   text-align: center;
 }
 
 .banner03 {
-  height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.281), rgba(0, 0, 0, 0.308)), url('img/p.jpg');
   background-size: cover;
   background-position: center;
@@ -190,6 +175,27 @@ nav li a:hover {
   animation: vibrar 0.5s ease-in-out infinite both;
 }
 
+.texto .botoes10 button {
+  height: 40px;
+  width: 200px;
+  border-radius: 4px;
+  border: 0;
+  margin-bottom: 650px;
+  margin-left: 1140px;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0 10px;
+  cursor: pointer;
+  outline: none;
+  transition: 0.3s;
+  background: #e050c3ac;
+  color: #fff;
+}
+.texto a{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+
 @keyframes vibrar {
   0% {
     transform: scale(1);
@@ -269,12 +275,11 @@ body {
 .box {
   height: 48%;
   margin-left:-35%;
-  margin-top: -200px;
+  margin-top: 100px;
   width: 1500%;
-  max-width: 500px;
-  border: 2px solid rgba(212, 104, 226, 0.664);
+  max-width: 400px;
   border-radius: 50px;
-  background: rgba(144, 5, 17, 0.174);
+ 
 }
 
 .box2{
@@ -289,14 +294,16 @@ body {
 }
 
 .box3{
-  height: 75%;
-
-  margin-top: 10px;
-  width: 190%;
-  max-width: 800px;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  width: 50%;
   border: 2px solid rgba(212, 104, 226, 0.664);
   border-radius: 25px;
   background: rgba(144, 5, 17, 0.174);
+  text-align: center;
+  font-size: 22px;
+  font-family: 'Cinzel', serif;
+  
 }
 
 
@@ -307,16 +314,6 @@ h1 {
 
 }
 
-h4 {
-
-  text-align: center;
-  margin-left: 50px;
-  margin-top: 50px;
-  margin-right: 50px;
-  font-size: 22px;
-  font-family: 'Cinzel', serif;
-
-}
 
 .CLASSE2 {
   color: rgba(0, 0, 0, 0.661);
