--- a/site.css
+++ b/site.css
@@ -11,11 +11,12 @@ header {
 
 header h1 {
   color: rgb(255, 255, 255);
-  font-size: 35px;
+  font-size: 50px;
   font-family: 'Cinzel', serif;
-  margin-left: 10%;
-  margin-top: -4%;
-  margin-bottom: 2%;
+  margin-right: 63%;
+  margin-top: -0%;
+  margin-bottom: -2%;
+  height: 5px;
 }
 
 header a{
@@ -23,6 +24,14 @@ header a{
   color: #fff;
   font-family: 'Poppins', sans-serif;
   font-size: 30px;
+  
+}
+
+header .menu{
+  display:inline;
+  text-align: right;
+  width: 50px;
+  height: 10px;
 }
 
 header button{
@@ -42,6 +51,7 @@ header button :hover{
 header .menu{
   margin-left: 70%;
   margin-top: -4%;
+  margin-right: 10px;
 }
 
 .div1 img {
@@ -50,7 +60,7 @@ header .menu{
 
 .banner {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.281), rgba(0, 0, 0, 0.308)), url('img/IMAGEM.jpeg');
+  background: linear-gradient(rgba(0, 0, 0, 0.281), rgba(0, 0, 0, 0.308)), url('img/imagemm.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
